--- a/index.html
+++ b/index.html
@@ -15,5 +15,19 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
+    <div class="content">
+        <div class="section-1">
+
+        </div>
+        <div class="section-2">
+
+        </div>
+        <div class="section-3">
+            
+        </div>
+    </div>
+    <div class="footer">
+        
+    </div>
 </body>
 </html>
