--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     </div>
     <div class="content">
         <div class="section-1">
-
+            <div class="description">
+                <h2>This website is awesome</h2>
+                <div class="subtext">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="this is a placeholder for an image">
         </div>
         <div class="section-2">
 
@@ -27,7 +34,7 @@
         </div>
     </div>
     <div class="footer">
-        
+
     </div>
 </body>
 </html>
