--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
             <img src="" alt="this is a placeholder for an image">
         </div>
         <div class="section-2">
-
+            <h3>Some random information.</h3>
+            <div class="image-container">
+                <div class="img">
+                    <img src="" alt="image1">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="img"></div>
+                    <img src="" alt="image2">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="img"></div>
+                    <img src="" alt="image3">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="img"></div>
+                    <img src="" alt="image4">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
         <div class="section-3">
             
