Add content for section 3

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="content">
         <div class="section-1">
             <div class="description">
-                <h2>This website is awesome</h2>
+                <div class="title1">This website is awesome</div>
                 <div class="subtext">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
@@ -27,7 +27,7 @@
             <img src="" alt="this is a placeholder for an image">
         </div>
         <div class="section-2">
-            <h3>Some random information.</h3>
+            <div class="title2">Some random information.</div>
             <div class="image-container">
                 <div class="img">
                     <img src="" alt="image1">
@@ -48,7 +48,10 @@
             </div>
         </div>
         <div class="section-3">
-            
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="quote-source">-Thor, God of Thunder</div>
         </div>
     </div>
     <div class="footer">
