Add footer content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         </div>
     </div>
     <div class="footer">
-
+        <div class="footer-title">Call to action! It's time!</div>
+        <div class="footer-text">Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
     </div>
 </body>
 </html>
