--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
             </div>
             <div class="quote-source">-Thor, God of Thunder</div>
         </div>
+        <div class="section-4">
+            <div class="footer-title">Call to action! It's time!</div>
+            <div class="footer-text">Sign up for our product by clicking that button right over there!</div>
+            <button>Sign up</button>
+        </div>
     </div>
     <div class="footer">
-        <div class="footer-title">Call to action! It's time!</div>
-        <div class="footer-text">Sign up for our product by clicking that button right over there!</div>
-        <button>Sign up</button>
+        
     </div>
 </body>
 </html>
