Link image file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <img src="" alt="this is a placeholder for an image">
+            <img src="\images\" alt="this is a placeholder for an image">
         </div>
         <div class="section-2">
             <div class="title2">Some random information.</div>
@@ -56,7 +56,7 @@
         <div class="section-4">
             <div class="footer-title">Call to action! It's time!</div>
             <div class="footer-text">Sign up for our product by clicking that button right over there!</div>
-            <button>Sign up</button>
+            <button class="call-button">Sign up</button>
         </div>
     </div>
     <div class="footer">
