--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <img src="\images\" alt="this is a placeholder for an image">
+            <img src="\images\PlaceholderImage.png" alt="this is a placeholder for an image">
         </div>
         <div class="section-2">
             <div class="title2">Some random information.</div>
