--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <div class="title2">Some random information.</div>
             <div class="image-container">
                 <div class="img">
-                    <img src="" alt="image1">
+                    <img src="\images\PlaceholderImage2.png" alt="image1">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="img"></div>
-                    <img src="" alt="image2">
+                    <img src="\images\PlaceholderImage2.png" alt="image2">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="img"></div>
-                    <img src="" alt="image3">
+                    <img src="\images\PlaceholderImage2.png" alt="image3">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="img"></div>
-                    <img src="" alt="image4">
+                    <img src="\images\PlaceholderImage2.png" alt="image4">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
