Correct closing brackets for div's in section 2

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <div class="title2">Some random information.</div>
             <div class="image-container">
                 <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image1" width="50px">
+                    <img src="\images\PlaceholderImage2.png" alt="image1" width="150px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="img"></div>
-                    <img src="\images\PlaceholderImage2.png" alt="image2" width="50px">
+                <div class="img">
+                    <img src="\images\PlaceholderImage2.png" alt="image2" width="150px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="img"></div>
-                    <img src="\images\PlaceholderImage2.png" alt="image3" width="50px">
+                <div class="img">
+                    <img src="\images\PlaceholderImage2.png" alt="image3" width="150px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="img"></div>
-                    <img src="\images\PlaceholderImage2.png" alt="image4" width="50px">
+                <div class="img">
+                    <img src="\images\PlaceholderImage2.png" alt="image4" width="150px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
