--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
             <div class="title2">Some random information.</div>
             <div class="image-container">
                 <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image1" width="150px">
+                    <img src="\images\PlaceholderImage2.png" alt="image1" width="170px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image2" width="150px">
+                    <img src="\images\PlaceholderImage2.png" alt="image2" width="170px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image3" width="150px">
+                    <img src="\images\PlaceholderImage2.png" alt="image3" width="170px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image4" width="150px">
+                    <img src="\images\PlaceholderImage2.png" alt="image4" width="170px">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
@@ -54,8 +54,8 @@
             <div class="quote-source">-Thor, God of Thunder</div>
         </div>
         <div class="section-4">
-            <div class="footer-title">Call to action! It's time!</div>
-            <div class="footer-text">Sign up for our product by clicking that button right over there!</div>
+            <div class="title4">Call to action! It's time!</div>
+            <div class="text4">Sign up for our product by clicking that button right over there!</div>
             <button class="call-button">Sign up</button>
         </div>
     </div>
