Add button class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="subtext">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
-                <button>Sign up</button>
+                <button class="btn">Sign up</button>
             </div>
             <img src="\images\PlaceholderImage.png" alt="this is a placeholder for an image">
         </div>
@@ -54,9 +54,11 @@
             <div class="quote-source">-Thor, God of Thunder</div>
         </div>
         <div class="section-4">
-            <div class="title4">Call to action! It's time!</div>
-            <div class="text4">Sign up for our product by clicking that button right over there!</div>
-            <button class="call-button">Sign up</button>
+            <div class="call-to-action">
+                <div class="title4">Call to action! It's time!</div>
+                <div class="text4">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="btn call">Sign up</button>
         </div>
     </div>
     <div class="footer">
