--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <ul class="header-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
-    </div>
-    <div class="content">
+    <div class="head">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul class="header-links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
         <div class="section-1">
             <div class="description">
                 <div class="title1">This website is awesome</div>
@@ -24,35 +24,39 @@
                 </div>
                 <button class="btn">Sign up</button>
             </div>
-            <img src="\images\PlaceholderImage.png" alt="this is a placeholder for an image">
-        </div>
-        <div class="section-2">
-            <div class="title2">Some random information.</div>
-            <div class="image-container">
-                <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image1" width="170px">
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
-                <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image2" width="170px">
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
-                <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image3" width="170px">
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
-                <div class="img">
-                    <img src="\images\PlaceholderImage2.png" alt="image4" width="170px">
-                    <div class="text">this is some subtext under an illustration or image</div>
-                </div>
+            <div class="hero-img">
+                <img src="\images\PlaceholderImage.png" alt="this is a placeholder for an image">
             </div>
         </div>
-        <div class="section-3">
-            <div class="quote">
-                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+    </div>
+    <div class="section-2">
+        <div class="title2">Some random information.</div>
+        <div class="image-container">
+            <div class="img">
+                <img src="\images\PlaceholderImage2.png" alt="image1" width="170px">
+                <div class="text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="quote-source">-Thor, God of Thunder</div>
+            <div class="img">
+                <img src="\images\PlaceholderImage2.png" alt="image2" width="170px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="img">
+                <img src="\images\PlaceholderImage2.png" alt="image3" width="170px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="img">
+                <img src="\images\PlaceholderImage2.png" alt="image4" width="170px">
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
         </div>
+    </div>
+    <div class="section-3">
+        <div class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quote-source">-Thor, God of Thunder</div>
+    </div>
+    <div class="sec4-container">
         <div class="section-4">
             <div class="call-to-action">
                 <div class="title4">Call to action! It's time!</div>
