--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="btn">Sign up</button>
             </div>
             <div class="hero-img">
-                <img src="\images\PlaceholderImage.png" alt="this is a placeholder for an image">
+                <img src="images/PlaceholderImage.png" alt="this is a placeholder for an image">
             </div>
         </div>
     </div>
@@ -33,19 +33,19 @@
         <div class="title2">Some random information.</div>
         <div class="image-container">
             <div class="img">
-                <img src="\images\PlaceholderImage2.png" alt="image1" width="170px">
+                <img src="images/PlaceholderImage2.png" alt="image1" width="170px">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="img">
-                <img src="\images\PlaceholderImage2.png" alt="image2" width="170px">
+                <img src="images/PlaceholderImage2.png" alt="image2" width="170px">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="img">
-                <img src="\images\PlaceholderImage2.png" alt="image3" width="170px">
+                <img src="images/PlaceholderImage2.png" alt="image3" width="170px">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="img">
-                <img src="\images\PlaceholderImage2.png" alt="image4" width="170px">
+                <img src="images/PlaceholderImage2.png" alt="image4" width="170px">
                 <div class="text">this is some subtext under an illustration or image</div>
             </div>
         </div>
